[package]
name = "tb-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rumqttc = "0.24"
dotenvy = "0.15"
anyhow = "1"
urlencoding = "2.1"
